--- a/illustration.html
+++ b/illustration.html
@@ -93,7 +93,7 @@
 
     <div class="col-sm-4">
        <div class="container-fluid">
-         <img class="img-fluid" src="illustration/00.jpg" style="border: 1px solid white;">
+         <img class="img-fluid" src="illustration/single/00.jpg" style="border: 1px solid white;">
        </div>
    
       <br>
@@ -138,6 +138,45 @@
         </form>
         </div>
     </div>
+
+  </div>
+</div>
+	
+<div class="container" style="margin-top:30px; margin-bottom: 120px;">
+  <div class="row; d-flex justify-content-center">
+
+    <div class="col-sm-4">
+       <div class="container-fluid">
+         <img class="img-fluid" src="illustration/nf/NF_Cover.jpg" style="border: 1px solid white;">
+       </div>
+   
+      <br>
+
+        <div class="d-flex justify-content-center">
+        <form action="illustration/nf.html">
+      <button type="submit" class="btn btn-outline-light"> Nurse Florence
+      </button>
+        </form>
+        </div>
+
+    </div>
+
+    <div class="col-sm-4">
+       <div class="container-fluid">
+         <img class="img-fluid" src="illustration/single/Old.png" style="border: 1px solid white;">
+       </div>
+   
+      <br>
+
+
+        <div class="d-flex justify-content-center">
+        <form action="illustration/portraits.html">
+      <button type="submit" class="btn btn-outline-light"> Portraits
+      </button>
+        </form>
+        </div>
+    </div>
+      
 
   </div>
 </div>
