--- a/illustration/yn.html
+++ b/illustration/yn.html
@@ -76,7 +76,7 @@
     <div class="col-sm-6">
        <div class="container-fluid">
            <div class="d-flex justify-content-center">
-               <img class="img-fluid" src="yn.jpg">
+               <img class="img-fluid" src="single/yn.jpg">
            </div>
        </div>
     </div>
